force-app/main/default/objects/EV_CampaingMemeberStaging__c/EV_CampaingMemeberStaging__c.object-meta.xml
<CustomObject>
    <label>Campaing Memeber Staging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CampaingMemeberStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaing Memebers Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>