force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>EV_CampaignMemberId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EV_CampaignMemberId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>