force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_Canal__c.field-meta.xml
<CustomField>
    <fullName>EV_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Canal web</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Canal LOM</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Canal nativo(ios/android)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Imagin</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>