force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_Canal_Origen__c.field-meta.xml
<CustomField>
    <fullName>EV_Canal_Origen__c</fullName>
    <label>Canal Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Invitado PUSH</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Invitado MAIL</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Web</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>MGM</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>RRSS</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Inivtado &quot;Mis Clientes&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>