force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_ContadorCheckInVirtual__c.field-meta.xml
<CustomField>
    <fullName>EV_ContadorCheckInVirtual__c</fullName>
    <description>Contador que registra las veces que se ha ingresado a la página de check in virtual. Lo actualiza portales</description>
    <label>Contador CheckIn virtual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>