force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_Numperso__c.field-meta.xml
<CustomField>
    <fullName>EV_Numperso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numperso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>