force-app/main/default/objects/EV_CampaingMemeberStaging__c/fields/EV_Status__c.field-meta.xml
<CustomField>
    <fullName>EV_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <default>true</default>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>